[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/UI/ui_panel_2.png" type="Texture" id=1]
[ext_resource path="res://scripts/main_menu/SaveFileSlot.gd" type="Script" id=2]

[node name="SaveFileSlot" type="NinePatchRect"]
margin_right = 360.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 75 )
mouse_filter = 0
texture = ExtResource( 1 )
patch_margin_left = 25
patch_margin_top = 25
patch_margin_right = 25
patch_margin_bottom = 25
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = -4.0
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameAndMoney" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 352.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerNameLabel" type="Label" parent="VBoxContainer/NameAndMoney"]
margin_top = 11.0
margin_right = 276.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "USERNAME WOO"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyLabel" type="Label" parent="VBoxContainer/NameAndMoney"]
margin_left = 280.0
margin_top = 11.0
margin_right = 352.0
margin_bottom = 25.0
text = "$39589450"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DateAndDay" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 352.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DayLabel" type="Label" parent="VBoxContainer/DateAndDay"]
margin_top = 11.0
margin_right = 174.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Day 1000"

[node name="LastPlayedLabel" type="Label" parent="VBoxContainer/DateAndDay"]
margin_left = 178.0
margin_top = 11.0
margin_right = 352.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Played: 30/2/2022"
align = 2
